syntax = "proto3";

package api;

option go_package = "./pb/cart_pb;cart";

service CartService {
  rpc AddItem(AddItemReq) returns (AddItemResp) {}
  rpc GetCart(GetCartReq) returns (GetCartResp) {}
  rpc EmptyCart(EmptyCartReq) returns (EmptyCartResp) {}
}

message CartItem {
  uint32 product_id = 1;
  int32  quantity = 2;
}

message AddItemReq {
  int64 user_id = 1;
  CartItem item = 2;
}

message AddItemResp {}

message EmptyCartReq {
  int64 user_id = 1;
}

message GetCartReq {
  int64 user_id = 1;
}

message GetCartResp {
  Cart cart = 1;
}

message Cart {
  int64 user_id = 1;
  repeated CartItem items = 2;
}

message EmptyCartResp {}